Fix border-bottom for wrapped Notification links
[#115622339]
[Finishes: #115289863]

--- a/src/components/notifications/Notification.sass
+++ b/src/components/notifications/Notification.sass
@@ -36,8 +36,6 @@
   color: #aaa
 
 .NotificationBody a
-  display: inline-block
-  vertical-align: top
   word-wrap: break-word
   max-width: 100%
 
